--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
-    "commander": "^4.0.1",
-    "fs-extra": "^8.1.0"
+    "commander": "^4.0.1"
   }
 }
