--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "dependencies": {
     "axios": "^0.19.0",
     "commander": "^4.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.7.0",
+    "eslint-config-google": "^0.14.0"
   }
 }
