--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
-    "commander": "^4.0.1"
+    "commander": "^4.0.1",
+    "node-jose": "^1.1.3"
   },
   "devDependencies": {
     "eslint": "^6.7.0",
