--- a/package.json
+++ b/package.json
@@ -7,16 +7,22 @@
     "type": "git",
     "url": "https://github.com/ICAREdata/icaredata-client"
   },
+  "scripts": {
+    "test": "yarn jest"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
     "commander": "^4.0.1",
+    "dotenv": "^8.2.0",
     "node-jose": "^1.1.3"
   },
   "devDependencies": {
     "eslint": "^6.7.0",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-google": "^0.14.0",
+    "jest": "25.1.0",
+    "nock" : ""
   },
   "type": "module"
 }
