--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "axios": "^0.19.0",
     "commander": "^4.0.1",
     "dotenv": "^8.2.0",
-    "node-jose": "^1.1.3"
-  },
+    "node-jose": "^1.1.3",
+    "node-forge" : "0.9.1" 
+   },
   "devDependencies": {
     "eslint": "^6.7.0",
     "eslint-config-google": "^0.14.0",
