--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "icaredata-client",
+  "name": "fhir-messaging-client",
   "version": "0.0.0",
   "description": "A command-line interface that posts FHIR Messages from a file system to the ICAREdata API",
-  "main": "index.js",
+  "main": "src/Client.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ICAREdata/icaredata-client"
+    "url": "https://github.com/ICAREdata/fhir-messaging-client"
   },
   "scripts": {
     "test": "yarn jest"
@@ -16,14 +16,14 @@
     "axios": "^0.19.0",
     "commander": "^4.0.1",
     "dotenv": "^8.2.0",
+    "node-forge": "0.9.1",
     "node-jose": "^1.1.3",
-    "node-forge" : "0.9.1" 
-   },
+    "uuid": "^8.0.0"
+  },
   "devDependencies": {
     "eslint": "^6.7.0",
     "eslint-config-google": "^0.14.0",
     "jest": "25.1.0",
-    "nock" : ""
-  },
-  "type": "module"
+    "nock": ""
+  }
 }
