--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   "scripts": {
     "test": "yarn jest"
   },
-  "author": "",
+  "contributors": [
+    "Dylan Mahalingam <kmahalingam@mitre.org>",
+    "Julia Afeltra <jafeltra@mitre.org>",
+    "Julian Carter <jacarter@mitre.org>",
+    "Matthew Gramigna <mgramigna@mitre.org>",
+    "Daniel Lee <daniellee@mitre.org>",
+    "Dylan Phelan <dphelan@mitre.org>"
+  ],
   "license": "ISC",
   "dependencies": {
     "acorn": "^7.1.1",
